--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,34 @@
 body {
   background: rgb(4, 5, 10);
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --light-color: #fff;
+  --dark-color: #000;
 }
 
 h1,
 h3 {
-  letter-spacing: 2rem;
+  color: var(--light-color);
+  text-align: center;
   font-weight: 100;
-  margin: 0 -2rem 0.8rem 0;
+  margin-bottom: 0.8rem;
+  letter-spacing: 2rem;
+  padding-left: 2rem;
 }
 
 header {
+  background: var(--dark-color);
   position: sticky;
   z-index: 100;
-  background: rgb(4, 5, 10);
   top: 0;
-  color: #fff;
-  text-align: center;
   padding: 0.5rem 0;
-  margin: 0 auto;
+  box-shadow: 0 0 30px 10px var(--dark-color);
 }
 
-.wrapper {
+.container {
   display: flex;
   /* justify-content: center; */
   width: 100%;
@@ -36,6 +44,7 @@ header {
 }
 
 .timeline li {
+  font-family: "Montserrat", sans-serif;
   display: flex;
   position: relative;
   margin-bottom: 50px;
@@ -46,7 +55,7 @@ header {
   position: relative;
   width: 46%;
   border-radius: 10px;
-  background: #f5f5f5;
+  background: var(--light-color);
   /* box-shadow: 3px 3px 12px #dee1e4, -3px -3px 12px #fff; */
 }
 
@@ -55,7 +64,7 @@ header {
   margin: 0.1rem auto 0;
 }
 
-.timeline p {
+.timeline .info {
   padding: 0 20px 10px;
 }
 
@@ -72,7 +81,7 @@ header {
 
 .timeline summary:hover {
   cursor: pointer;
-  background: #f8f8f8;
+  background: var(--light-color);
   border-radius: 10px;
 }
 
@@ -97,7 +106,7 @@ header {
   bottom: 0;
   left: 50%;
   width: 3px;
-  background: #f5f5f5;
+  background: var(--light-color);
   /* box-shadow: 1px 1px 5px #dee1e4, -1px -1px 5px #fff; */
 }
 
@@ -110,13 +119,13 @@ header {
   border-radius: 50%;
   top: 18px;
   left: 50%;
-  background: #f8f8f8;
+  background: var(--light-color);
   margin-left: -6px;
   z-index: 10;
   /* box-shadow: 2px 2px 5px #dee1e4, -2px -2px 5px #fff; */
 }
 
-/* alternate entries */
+/* zig-zag entries */
 .timeline li:nth-child(even) {
   justify-content: flex-end;
 }
