--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ h3 {
   padding-left: 2rem;
 }
 
+a {
+  color: var(--dark-color);
+}
+
 header {
   background: var(--dark-color);
   position: sticky;
@@ -30,7 +34,6 @@ header {
 
 .container {
   display: flex;
-  /* justify-content: center; */
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
@@ -56,7 +59,6 @@ header {
   width: 46%;
   border-radius: 10px;
   background: var(--light-color);
-  /* box-shadow: 3px 3px 12px #dee1e4, -3px -3px 12px #fff; */
 }
 
 .timeline h5 {
@@ -86,7 +88,7 @@ header {
 }
 
 .timeline .panel[open] summary {
-  border-radius: 10px 10px 0 0; /* keep or remove*/
+  border-radius: 10px 10px 0 0;
   margin-bottom: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
@@ -107,7 +109,6 @@ header {
   left: 50%;
   width: 3px;
   background: var(--light-color);
-  /* box-shadow: 1px 1px 5px #dee1e4, -1px -1px 5px #fff; */
 }
 
 /* dots */
@@ -122,7 +123,6 @@ header {
   background: var(--light-color);
   margin-left: -6px;
   z-index: 10;
-  /* box-shadow: 2px 2px 5px #dee1e4, -2px -2px 5px #fff; */
 }
 
 /* zig-zag entries */
