--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,18 @@ body {
   --dark-color: #000;
 }
 
+#bg-noise-vid-div video {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  position: fixed;
+  object-fit: cover;
+  z-index: -100;
+  filter: contrast(1.3);
+}
+
 h1,
 h3 {
   color: var(--light-color);
